fixed remaining css layout issues on template-list

--- a/src/app/template-list/template-list.component.scss
+++ b/src/app/template-list/template-list.component.scss
@@ -15,6 +15,7 @@
 	min-width: 300px;
   overflow: hidden;
   text-align: center;
+  z-index: 10;
 }
 
 .card:before {
